# RAG_Implementation

./: README.md  app.py  pyproject.toml  requirements.txt
data/csv/: data.csv
data/vector_store/011346a3-75cd-4bd2-9b66-1a041b10cfd6/: index_metadata.pickle
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdf_loader.ipynb
