[project]
name = "rag-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "libmagic>=1.0",
    "openpyxl>=3.1.5",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.0",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.68.1",
    "unstructured>=0.22.31",
]
